--- a/public/frontend/less/pages/support.less
+++ b/public/frontend/less/pages/support.less
@@ -56,16 +56,25 @@ input {
           box-sizing: border-box;
           padding-left: 14px;
           height: 38px;
+          color:#fff;
           width: 88%;
           line-height: 38px;
+          background-color: rgba(2,0,0,0.5);
           border: 1px solid #ffffff;
         }
-        .submit {
+        .submit_btn {
+          box-sizing: border-box;
           float: left;
           outline: 0;
           height: 38px;
           width: 12%;
+          border:1px solid #fff;
+          .searchImg{
+            width:21px;
+            heigth:27px;
+          }
         }
+
       }
     }
 
