--- a/public/frontend/css/pages/support.css
+++ b/public/frontend/css/pages/support.css
@@ -324,15 +324,23 @@ input {
   box-sizing: border-box;
   padding-left: 14px;
   height: 38px;
+  color: #fff;
   width: 88%;
   line-height: 38px;
+  background-color: rgba(2, 0, 0, 0.5);
   border: 1px solid #ffffff;
 }
-#support_main .banner-container .search .productForm .submit {
+#support_main .banner-container .search .productForm .submit_btn {
+  box-sizing: border-box;
   float: left;
   outline: 0;
   height: 38px;
   width: 12%;
+  border: 1px solid #fff;
+}
+#support_main .banner-container .search .productForm .submit_btn .searchImg {
+  width: 21px;
+  heigth: 27px;
 }
 #support_main .service-nav {
   display: block;
