--- a/public/cms/css/pages/carousel.css
+++ b/public/cms/css/pages/carousel.css
@@ -160,8 +160,163 @@ table {
 }
 #carousel_main {
   min-width: 1146px;
-  height: 600px;
   position: absolute;
   top: 56px;
   left: 220px;
+  bottom: 0;
+  right: 0;
+  background-color: #f1f1f1;
+  font-size: 14px;
+}
+#carousel_main .clearfix:after {
+  content: ".";
+  height: 0;
+  display: block;
+  clear: both;
+  visibility: hidden;
+}
+#carousel_main .menu {
+  height: 90px;
+  background-color: #f1f1f1;
+}
+#carousel_main .menu .tab {
+  float: left;
+  margin-left: 40px;
+  margin-top: 30px;
+  height: 40px;
+}
+#carousel_main .menu .tab .tab_item {
+  float: left;
+  width: 128px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  border: 1px solid #cccccc;
+}
+#carousel_main .menu .tab .active_item {
+  border: 1px solid #25ba80;
+  color: #25ba80;
+}
+#carousel_main .menu .btn_group {
+  float: right;
+  height: 40px;
+  margin-top: 38px;
+}
+#carousel_main .menu .btn_group .btn {
+  width: 60px;
+  height: 32px;
+  border-radius: 4px;
+  background-color: #25ba80;
+  margin-right: 88px;
+  color: #fff;
+  border: none;
+}
+#carousel_main .product_table {
+  background-color: #f1f1f1;
+}
+#carousel_main .product_table .thead {
+  height: 40px;
+  background-color: #ffffff;
+  color: #666666;
+}
+#carousel_main .product_table .thead > span {
+  display: inline-block;
+  float: left;
+  width: 25%;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+}
+#carousel_main .product_table .tbody > p {
+  height: 80px;
+  background-color: #fff;
+  margin-top: 6px;
+}
+#carousel_main .product_table .tbody > p > span.field {
+  display: inline-block;
+  float: left;
+  width: 25%;
+  height: 80px;
+  text-align: center;
+}
+#carousel_main .product_table .tbody > p > span:nth-of-type(1) {
+  line-height: 80px;
+}
+#carousel_main .product_table .tbody > p > span:nth-of-type(2) {
+  line-height: 80px;
+}
+#carousel_main .product_table .tbody > p > span:nth-of-type(2) input {
+  width: 200px;
+  height: 36px;
+  margin: 22px auto;
+  text-align: center;
+  border: 1px solid #25ba80;
+}
+#carousel_main .product_table .tbody > p > span:nth-of-type(3) .img_wrapper {
+  position: relative;
+  display: block;
+  width: 60px;
+  height: 60px;
+  margin: 10px auto;
+}
+#carousel_main .product_table .tbody > p > span:nth-of-type(3) .img_wrapper > img {
+  width: 100%;
+  height: 100%;
+}
+#carousel_main .product_table .tbody > p > span:nth-of-type(3) .img_wrapper > span.mask {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: rgba(51, 51, 51, 0.7);
+}
+#carousel_main .product_table .tbody > p > span:nth-of-type(3) .img_wrapper > span.mask img {
+  width: 28px;
+  height: 28px;
+  margin: 15px;
+}
+#carousel_main .product_table .tbody > p span:nth-of-type(4) {
+  line-height: 80px;
+}
+#carousel_main .product_table .tbody > p span:nth-of-type(4) .btn {
+  padding: 9px 15px;
+  border: 1px solid #25ba80;
+  color: #25ba80;
+  border-radius: 4px;
+}
+#carousel_main .product_table .tbody > p span:nth-of-type(4) .btn:hover {
+  color: #5a5a5a;
+  border: 1px solid #5a5a5a;
+}
+#carousel_main .el-dialog {
+  width: 560px;
+  border-radius: 20px;
+}
+#carousel_main .el-dialog input {
+  width: 80%;
+  height: 40px;
+  line-height: 40px;
+  text-align: left;
+  font-size: 18px;
+  color: #5a5a5a;
+  padding-left: 10px;
+}
+#carousel_main .el-dialog p > img {
+  width: 300px;
+  height: 150px;
+  margin: 15px auto;
+}
+#carousel_main .el-dialog .dialog-footer {
+  text-align: center;
+}
+#carousel_main .el-dialog .dialog-footer button {
+  width: 100px;
+  height: 32px;
+}
+#carousel_main .el-dialog .dialog-footer .el-button--default {
+  color: #25ba80;
+  border: 1px solid #25ba80;
+}
+#carousel_main .el-dialog .dialog-footer .el-button--primary {
+  color: #fff;
+  background-color: #25ba80;
 }
