--- a/public/cms/less/pages/carousel.less
+++ b/public/cms/less/pages/carousel.less
@@ -3,8 +3,171 @@
 
 #carousel_main{
   min-width:1146px;
-  height:600px;
+ // height:600px;
   position:absolute;
   top:56px;
   left:220px;
+  bottom:0;
+  right: 0;
+  background-color: #f1f1f1;
+  font-size:14px;
+  .clearfix:after{
+    content: ".";
+    height: 0;
+    display: block;
+    clear: both;
+    visibility: hidden;
+  }
+  .menu{
+    height: 90px;
+    background-color: #f1f1f1;
+    .tab{
+      float: left;
+      margin-left: 40px;
+      margin-top: 30px;
+      height: 40px;
+      .tab_item{
+        float: left;
+        width: 128px;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
+        border: 1px solid #cccccc;
+      }
+      .active_item{
+        border:1px solid #25ba80;
+        color: #25ba80;
+      }
+    }
+    .btn_group{
+      float: right;
+      height: 40px;
+      margin-top:38px;
+      .btn{
+        width: 60px;
+        height: 32px;
+        border-radius: 4px;
+        background-color: #25ba80;
+        margin-right: 88px;
+        color:#fff;
+        border: none;
+      }
+    }
+  }
+  .product_table{
+    background-color: #f1f1f1;
+    .thead{
+      height: 40px;
+      background-color: #ffffff;
+      color:#666666;
+      >span{
+        display: inline-block;
+        float: left;
+        width: 25%;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
+      }
+    }
+    .tbody{
+      >p {
+        height: 80px;
+        background-color:#fff;
+        margin-top: 6px;
+        >span.field{
+          display: inline-block;
+          float: left;
+          width: 25%;
+          height: 80px;
+          text-align: center;
+        }
+       >span:nth-of-type(1){
+          line-height: 80px;
+        }
+        >span:nth-of-type(2){
+          line-height: 80px;
+          input{
+            width: 200px;
+            height: 36px;
+            margin: 22px auto;
+            text-align: center;
+            border:1px solid #25ba80;
+          }
+        }
+        >span:nth-of-type(3){
+          .img_wrapper{
+            position: relative;
+            display: block;
+            width: 60px;
+            height:60px;
+            margin:10px auto;
+              >img{
+                width: 100%;
+                height: 100%;
+              }
+              >span.mask{
+                position: absolute;
+                left: 0;
+                top:0;
+                background-color:rgba(51,51,51,0.7);
+                img{
+                  width: 28px;
+                  height: 28px;
+                  margin:15px;
+                }
+              }
+          }
+        }
+        span:nth-of-type(4){
+          line-height: 80px;
+          .btn{
+            padding:9px 15px;
+            border: 1px solid #25ba80;
+            color:#25ba80;
+            border-radius: 4px;
+          }
+          .btn:hover{
+            color:#5a5a5a;
+            border:1px solid #5a5a5a;
+          }
+        }
+      }
+    }
+  }
+  .el-dialog{
+     width: 560px;
+     border-radius: 20px;
+     input{
+       width: 80%;
+       height:40px;
+       line-height: 40px;
+       text-align: left;
+       font-size:18px;
+       color:#5a5a5a;
+       padding-left: 10px;
+     }
+     p{
+       >img{
+         width:300px;
+         height:150px;
+         margin: 15px auto;
+       }
+     }
+    .dialog-footer{
+      text-align: center;
+      button{
+        width:100px;
+        height:32px;
+      }
+      .el-button--default{
+        color: #25ba80;
+        border:1px solid #25ba80;
+      }
+      .el-button--primary{
+        color: #fff;
+        background-color:#25ba80;
+      }
+    }
+  }
+
 }
