--- a/public/frontend/css/pages/contact.css
+++ b/public/frontend/css/pages/contact.css
@@ -223,7 +223,7 @@ table {
   background: url('/images/facebook_icon.png');
 }
 #footer .subscribe .link .twitter_icon {
-  background: url('/images/twitter_icon.png');
+  background: url('/images/twitter.png');
 }
 #footer .subscribe .link .google_icon {
   background: url('/images/google_icon.png');
