--- a/public/frontend/less/common/common.less
+++ b/public/frontend/less/common/common.less
@@ -134,7 +134,7 @@
         background:url('/images/facebook_icon.png');
       }
       .twitter_icon{
-        background:url('/images/twitter_icon.png');
+        background:url('/images/twitter.png');
       }
       .google_icon{
         background:url('/images/google_icon.png');
