--- a/public/cms/css/pages/dataAnalysis.css
+++ b/public/cms/css/pages/dataAnalysis.css
@@ -158,6 +158,53 @@ table {
   top: 31px;
   left: 0;
 }
+/*弹出框 强改样式*/
+.el-dialog {
+  padding: 15px 25px 0 25px;
+  margin: 0;
+}
+.el-dialog__header {
+  font-weight: 300!important;
+  height: 40px!important;
+  line-height: 40px!important;
+  padding: 0!important;
+}
+.el-dialog__body {
+  padding: 0!important;
+}
+.el-dialog__footer {
+  height: 40px!important;
+  line-height: 40px!important;
+  text-align: center!important;
+  padding: 0!important;
+}
+.el-dialog__footer button {
+  width: 85px!important;
+  height: 28px!important;
+  font-size: 12px!important;
+  border-radius: 4px!important;
+  padding: 0!important;
+}
+.el-dialog__footer button:nth-of-type(1) {
+  color: #25ba80!important;
+  border: solid 1px #25ba80!important;
+}
+.el-dialog__footer button:nth-of-type(2) {
+  color: #fff!important;
+  border: none!important;
+  margin: 0 0 0 5px!important;
+  background: #25ba80!important;
+}
+/*树 强改样式*/
+.el-tree {
+  border: none!important;
+}
+.el-tree-node__content:hover {
+  background: #e9f6ff!important;
+}
+.el-tree--highlight-current .el-tree-node.is-current > .el-tree-node__content {
+  background: #E9F6FF!important;
+}
 #dataAnalysis_main {
   min-width: 1146px;
   height: 600px;
