--- a/public/frontend/css/common/common.css
+++ b/public/frontend/css/common/common.css
@@ -130,7 +130,7 @@
   background: url('/images/facebook_icon.png');
 }
 #footer .subscribe .link .twitter_icon {
-  background: url('/images/twitter_icon.png');
+  background: url('/images/twitter.png');
 }
 #footer .subscribe .link .google_icon {
   background: url('/images/google_icon.png');
