--- a/public/frontend/less/common/common.less
+++ b/public/frontend/less/common/common.less
@@ -134,7 +134,7 @@
         background:url('/images/facebook_icon.png');
       }
       .twitter_icon{
-        background:url('/images/twitter.png');
+        background:url('/images/twitter_icon.png');
       }
       .google_icon{
         background:url('/images/google_icon.png');
@@ -175,4 +175,18 @@
       }
     }
   }
+}
+
+//分页强改样式
+.el-pager li:hover,.el-pagination button:hover{
+  color:#25ba80;
+}
+.el-pagination button.disabled{
+  color: #e4e4e4;
+}
+.el-pager li.active{
+  cursor:default;
+  color:#fff;
+  border-color: #25ba80;
+  background:#25ba80;
 }
