--- a/public/frontend/less/pages/home.less
+++ b/public/frontend/less/pages/home.less
@@ -70,6 +70,13 @@
       width:271px;
       height:331px;
       margin:0 12px;
+      &:hover{
+        -webkit-transform: translateY(-4px);
+        transform: translateY(-4px);
+        -webkit-animation-fill-mode: forwards;
+        animation-fill-mode: forwards;
+        box-shadow: 0 4px 30px rgba(0,0,0,.15)
+      }
       .oneProduct_img{
         width:271px;
         height:271px;
@@ -83,7 +90,7 @@
         width:271px;
         height:60px;
         padding:10px;
-        background-color: #585858;
+        background-color: #E8E8E8;
       }
     }
   }
