--- a/public/frontend/css/pages/home.css
+++ b/public/frontend/css/pages/home.css
@@ -223,7 +223,7 @@ table {
   background: url('/images/facebook_icon.png');
 }
 #footer .subscribe .link .twitter_icon {
-  background: url('/images/twitter.png');
+  background: url('/images/twitter_icon.png');
 }
 #footer .subscribe .link .google_icon {
   background: url('/images/google_icon.png');
@@ -264,6 +264,19 @@ table {
 #footer .contact .email > h4 {
   font-size: 16px;
   margin: 0 0 20px 0;
+}
+.el-pager li:hover,
+.el-pagination button:hover {
+  color: #25ba80;
+}
+.el-pagination button.disabled {
+  color: #e4e4e4;
+}
+.el-pager li.active {
+  cursor: default;
+  color: #fff;
+  border-color: #25ba80;
+  background: #25ba80;
 }
 #home_main .carouselArea {
   min-width: 1366px;
@@ -325,6 +338,14 @@ table {
   height: 331px;
   margin: 0 12px;
 }
+#home_main .product_sell .oneProduct:hover,
+#home_main .product_recom .oneProduct:hover {
+  -webkit-transform: translateY(-4px);
+  transform: translateY(-4px);
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.15);
+}
 #home_main .product_sell .oneProduct .oneProduct_img,
 #home_main .product_recom .oneProduct .oneProduct_img {
   width: 271px;
@@ -341,7 +362,7 @@ table {
   width: 271px;
   height: 60px;
   padding: 10px;
-  background-color: #585858;
+  background-color: #E8E8E8;
 }
 #home_main .product_recommend {
   margin: 0 0 60px 0;
