--- a/public/frontend/css/pages/product_detail.css
+++ b/public/frontend/css/pages/product_detail.css
@@ -223,7 +223,7 @@ table {
   background: url('/images/facebook_icon.png');
 }
 #footer .subscribe .link .twitter_icon {
-  background: url('/images/twitter.png');
+  background: url('/images/twitter_icon.png');
 }
 #footer .subscribe .link .google_icon {
   background: url('/images/google_icon.png');
@@ -264,6 +264,22 @@ table {
 #footer .contact .email > h4 {
   font-size: 16px;
   margin: 0 0 20px 0;
+}
+.el-pager li:hover,
+.el-pagination button:hover {
+  color: #25ba80;
+}
+.el-pagination button.disabled {
+  color: #e4e4e4;
+}
+.el-pager li.active {
+  cursor: default;
+  color: #fff;
+  border-color: #25ba80;
+  background: #25ba80;
+}
+#product_detail_main .productShow {
+  margin: 0 0 47px 0;
 }
 #product_detail_main .productShow .picShow {
   display: inline-block;
@@ -309,20 +325,29 @@ table {
   color: #25ba80;
   margin: 0 0 26px 0;
 }
-#product_detail_main .productShow .attrShow > div {
+#product_detail_main .productShow .attrShow > ul {
   margin: 0 0 26px 0;
 }
-#product_detail_main .productShow .attrShow > div > span {
+#product_detail_main .productShow .attrShow > ul > li {
   display: inline-block;
-  width: 100px;
-}
-#product_detail_main .productShow .attrShow > div > ul > li {
-  display: inline-block;
+  cursor: pointer;
+  padding: 3px 5px;
+  border: 1px solid #ccc;
+  border-radius: 2px;
   margin: 0 20px 0 0;
+}
+#product_detail_main .productShow .attrShow > button {
+  width: 186px;
+  height: 50px;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  background-color: #25ba80;
 }
 #product_detail_main .productDesc {
   width: 955px;
   margin: 0 auto;
+  background: #fff;
 }
 #product_detail_main .productDesc .productDesc_header {
   height: 38px;
@@ -333,6 +358,7 @@ table {
   margin: 0 0 5px 0;
 }
 #product_detail_main .productDesc .productDesc_header li {
+  cursor: default;
   width: 138px;
   text-align: center;
   float: left;
@@ -349,6 +375,10 @@ table {
 }
 #product_detail_main .productDesc .imageText {
   height: 200px;
+}
+#product_detail_main .productDesc .comment {
+  padding: 0 0 70px 0;
+  position: relative;
 }
 #product_detail_main .productDesc .comment > h3 {
   font-size: 36px;
@@ -381,4 +411,15 @@ table {
 #product_detail_main .productDesc .comment .comment_list .oneComment > p:nth-of-type(3) {
   margin: 0 0 7px 0;
   color: #333333;
+}
+#product_detail_main .productDesc .comment .comment_btn {
+  width: 186px;
+  height: 50px;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  background-color: #25ba80;
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
 }
