--- a/public/frontend/less/pages/product_detail.less
+++ b/public/frontend/less/pages/product_detail.less
@@ -150,3 +150,16 @@
     }
   }
 }
+
+.addComment_dialog{
+  width:340px;
+  height:210px;
+  .addComment_dialog_main{
+    input{
+      height: 32px;
+      line-height:32px;
+      font-size:12px;
+      margin:0 0 12px 0;
+    }
+  }
+}
