--- a/public/frontend/less/pages/user.less
+++ b/public/frontend/less/pages/user.less
@@ -110,24 +110,22 @@
       border-radius: 4px;
       background-color: #f8f8f8;
       border: solid 1px #cccccc;
-      padding-left: 20px;
+      padding-left: 10px;
       .form-email-tip{
         height: 13px;
-        margin-top: 11px;
-        font-family: MicrosoftYaHei;
         font-size: 14px;
         line-height: 1.07;
         text-align: left;
         color: #999999;
+        margin-top: 11px;
       }
       .form-email{
-        margin-bottom: 8px;
         height: 15px;
-        font-family: MicrosoftYaHei;
         font-size: 14px;
         line-height: 1.07;
         text-align: left;
         color: #666666;
+        margin-top: 8px;
       }
     }
     .form-footer{
@@ -149,11 +147,11 @@
     }
     input{
       box-sizing: border-box;
-      border: solid 1px #cccccc;
-      border-radius: 4px;
-      padding-left: 20px;
       height:40px;
       line-height:40px;
+      text-indent:10px;
+      border: solid 1px #cccccc;
+      border-radius: 4px;
     }
 
 
