--- a/public/cms/less/common/common.less
+++ b/public/cms/less/common/common.less
@@ -19,10 +19,11 @@
     right:130px;
     .user_icon{
       display:inline-block;
+      cursor:pointer;
       width: 16px;
       height: 16px;
       margin:0 0 0 20px;
-      background:url('/images/logo.png') no-repeat;
+      background:url('/images/quit_icon.png') no-repeat;
       background-size:16px 16px;
       position:relative;
       top:3px;
@@ -56,6 +57,42 @@
   >li.active{
     color:#ceb887;
     font-weight:500;
+  }
+  .areaGraph_icon,.cog_icon,.tables_icon,.email_icon,.pencil_icon,.location_icon,.monitor_icon{
+    display:inline-block;
+    width:25px;
+    height:17px;
+    position: absolute;
+    top: 31px;
+    left: 0;
+  }
+  .areaGraph_icon{
+    background:url('/images/areaGraph_icon.png') no-repeat;
+    background-size:25px 17px;
+  }
+  .cog_icon{
+    background:url('/images/cog_icon.png') no-repeat;
+    background-size:25px 17px;
+  }
+  .tables_icon{
+    background:url('/images/tables_icon.png') no-repeat;
+    background-size:25px 17px;
+  }
+  .email_icon{
+    background:url('/images/email_icon.png') no-repeat;
+    background-size:25px 17px;
+  }
+  .pencil_icon{
+    background:url('/images/pencil_icon.png') no-repeat;
+    background-size:25px 17px;
+  }
+  .location_icon{
+    background:url('/images/location_icon.png') no-repeat;
+    background-size:25px 17px;
+  }
+  .monitor_icon{
+    background:url('/images/monitor_icon.png') no-repeat;
+    background-size:25px 17px;
   }
 }
 
