--- a/public/cms/less/pages/productMana.less
+++ b/public/cms/less/pages/productMana.less
@@ -32,18 +32,21 @@
         font-size: 22px;
         font-weight: 500;
       }
-      .add_btn{
-        width: 55px;
-        height: 25px;
-        color:#fff;
-        padding:0;
-        border-radius: 4px;
-        border: solid 1px #25ba80;
-        background:#25ba80;
+      .operation_btn{
         position:absolute;
-        top:8px;
+        top:0;
         right:0;
+        .addClass_btn,.modifyClass_btn,.deleteClass_btn,.addProduct_btn{
+          //width: 55px;
+          height: 25px;
+          color:#fff;
+          padding:0 10px;
+          border-radius: 4px;
+          border: solid 1px #25ba80;
+          background:#25ba80;
+        }
       }
+
     }
     .product_table{
       width: 829px;
@@ -103,6 +106,18 @@
           border: solid 1px #25ba80;
         }
       }
+    }
+  }
+}
+.addClass_dialog{
+  width:340px;
+  height:155px;
+  .addClass_dialog_main{
+    input{
+      height: 32px;
+      line-height:32px;
+      font-size:12px;
+      margin:0 0 12px 0;
     }
   }
 }
