--- a/public/cms/css/pages/productMana.css
+++ b/public/cms/css/pages/productMana.css
@@ -143,7 +143,6 @@ table {
   margin: 0 0 10px 0;
 }
 #sideBar > li span {
-  line-height: 80px;
   font-size: 16px;
 }
 #sideBar > li.active {
@@ -158,39 +157,39 @@ table {
 #sideBar .location_icon,
 #sideBar .monitor_icon {
   display: inline-block;
-  width: 25px;
-  height: 17px;
+  width: 18px;
+  height: 18px;
   position: absolute;
-  top: 31px;
-  left: 0;
+  top: 16px;
+  left: 8px;
 }
 #sideBar .areaGraph_icon {
   background: url('/images/areaGraph_icon.png') no-repeat;
-  background-size: 25px 17px;
+  background-size: 18px 18px;
 }
 #sideBar .cog_icon {
   background: url('/images/cog_icon.png') no-repeat;
-  background-size: 25px 17px;
+  background-size: 18px 18px;
 }
 #sideBar .tables_icon {
   background: url('/images/tables_icon.png') no-repeat;
-  background-size: 25px 17px;
+  background-size: 18px 18px;
 }
 #sideBar .email_icon {
   background: url('/images/email_icon.png') no-repeat;
-  background-size: 25px 17px;
+  background-size: 18px 18px;
 }
 #sideBar .pencil_icon {
   background: url('/images/pencil_icon.png') no-repeat;
-  background-size: 25px 17px;
+  background-size: 18px 18px;
 }
 #sideBar .location_icon {
   background: url('/images/location_icon.png') no-repeat;
-  background-size: 25px 17px;
+  background-size: 18px 18px;
 }
 #sideBar .monitor_icon {
   background: url('/images/monitor_icon.png') no-repeat;
-  background-size: 25px 17px;
+  background-size: 18px 18px;
 }
 .ali {
   display: inline-block;
@@ -247,6 +246,19 @@ table {
 }
 .el-tree--highlight-current .el-tree-node.is-current > .el-tree-node__content {
   background: #E9F6FF!important;
+}
+.el-pager li:hover,
+.el-pagination button:hover {
+  color: #25ba80;
+}
+.el-pagination button.disabled {
+  color: #e4e4e4;
+}
+.el-pager li.active {
+  cursor: default;
+  color: #fff;
+  border-color: #25ba80;
+  background: #25ba80;
 }
 #productMana_main {
   min-width: 1146px;
@@ -320,19 +332,23 @@ table {
 }
 #productMana_main .main_right .product_table .product_thead > p > span:nth-of-type(2),
 #productMana_main .main_right .product_table .product_tbody > p > span:nth-of-type(2) {
-  width: 190px;
+  width: 170px;
 }
 #productMana_main .main_right .product_table .product_thead > p > span:nth-of-type(3),
 #productMana_main .main_right .product_table .product_tbody > p > span:nth-of-type(3) {
-  width: 170px;
+  width: 85px;
 }
 #productMana_main .main_right .product_table .product_thead > p > span:nth-of-type(4),
 #productMana_main .main_right .product_table .product_tbody > p > span:nth-of-type(4) {
-  width: 139px;
+  width: 169px;
 }
 #productMana_main .main_right .product_table .product_thead > p > span:nth-of-type(5),
 #productMana_main .main_right .product_table .product_tbody > p > span:nth-of-type(5) {
-  width: 150px;
+  width: 99px;
+}
+#productMana_main .main_right .product_table .product_thead > p > span:nth-of-type(6),
+#productMana_main .main_right .product_table .product_tbody > p > span:nth-of-type(6) {
+  width: 190px;
 }
 #productMana_main .main_right .product_table .product_thead {
   height: 40px;
@@ -354,14 +370,15 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-#productMana_main .main_right .product_table .product_tbody .detail_btn,
-#productMana_main .main_right .product_table .product_tbody .delete_btn {
-  width: 55px;
+#productMana_main .main_right .product_table .product_tbody button {
   height: 25px;
   color: #25ba80;
-  padding: 0;
+  padding: 0 5px;
   border-radius: 4px;
   border: solid 1px #25ba80;
+}
+#productMana_main .main_right .product_table .product_tbody button:not( :nth-of-type(1)) {
+  margin: 0 0 0 2px;
 }
 .addClass_dialog {
   width: 340px;
@@ -378,6 +395,16 @@ table {
   height: 245px;
 }
 .addProduct_dialog .addProduct_dialog_main input {
+  height: 32px;
+  line-height: 32px;
+  font-size: 12px;
+  margin: 0 0 12px 0;
+}
+.addPrice_dialog {
+  width: 340px;
+  height: 200px;
+}
+.addPrice_dialog .addPrice_dialog_main input {
   height: 32px;
   line-height: 32px;
   font-size: 12px;
