--- a/public/cms/css/pages/product_detail.css
+++ b/public/cms/css/pages/product_detail.css
@@ -143,7 +143,6 @@ table {
   margin: 0 0 10px 0;
 }
 #sideBar > li span {
-  line-height: 80px;
   font-size: 16px;
 }
 #sideBar > li.active {
@@ -158,39 +157,39 @@ table {
 #sideBar .location_icon,
 #sideBar .monitor_icon {
   display: inline-block;
-  width: 25px;
-  height: 17px;
+  width: 18px;
+  height: 18px;
   position: absolute;
-  top: 31px;
-  left: 0;
+  top: 16px;
+  left: 8px;
 }
 #sideBar .areaGraph_icon {
   background: url('/images/areaGraph_icon.png') no-repeat;
-  background-size: 25px 17px;
+  background-size: 18px 18px;
 }
 #sideBar .cog_icon {
   background: url('/images/cog_icon.png') no-repeat;
-  background-size: 25px 17px;
+  background-size: 18px 18px;
 }
 #sideBar .tables_icon {
   background: url('/images/tables_icon.png') no-repeat;
-  background-size: 25px 17px;
+  background-size: 18px 18px;
 }
 #sideBar .email_icon {
   background: url('/images/email_icon.png') no-repeat;
-  background-size: 25px 17px;
+  background-size: 18px 18px;
 }
 #sideBar .pencil_icon {
   background: url('/images/pencil_icon.png') no-repeat;
-  background-size: 25px 17px;
+  background-size: 18px 18px;
 }
 #sideBar .location_icon {
   background: url('/images/location_icon.png') no-repeat;
-  background-size: 25px 17px;
+  background-size: 18px 18px;
 }
 #sideBar .monitor_icon {
   background: url('/images/monitor_icon.png') no-repeat;
-  background-size: 25px 17px;
+  background-size: 18px 18px;
 }
 .ali {
   display: inline-block;
@@ -247,6 +246,19 @@ table {
 }
 .el-tree--highlight-current .el-tree-node.is-current > .el-tree-node__content {
   background: #E9F6FF!important;
+}
+.el-pager li:hover,
+.el-pagination button:hover {
+  color: #25ba80;
+}
+.el-pagination button.disabled {
+  color: #e4e4e4;
+}
+.el-pager li.active {
+  cursor: default;
+  color: #fff;
+  border-color: #25ba80;
+  background: #25ba80;
 }
 #product_detail_main {
   min-width: 1146px;
