--- a/public/cms/less/pages/productMana.less
+++ b/public/cms/less/pages/productMana.less
@@ -64,16 +64,22 @@
               width:59px;
             }
             &:nth-of-type(2){
-              width:190px;
-            }
-            &:nth-of-type(3){
               width:170px;
             }
+            &:nth-of-type(3){
+              width:85px;
+            }
             &:nth-of-type(4){
-              width:139px;
+              width:169px;
             }
             &:nth-of-type(5){
-              width:150px;
+              width:99px;
+            }
+            //&:nth-of-type(6){
+            //  width:50px;
+            //}
+            &:nth-of-type(6){
+              width:190px;
             }
           }
         }
@@ -97,13 +103,15 @@
             text-overflow: ellipsis;
           }
         }
-        .detail_btn,.delete_btn{
-          width: 55px;
+        button{
           height: 25px;
           color:#25ba80;
-          padding:0;
+          padding:0 5px;
           border-radius: 4px;
           border: solid 1px #25ba80;
+          &:not(:nth-of-type(1)){
+            margin:0 0 0 2px;
+          }
         }
       }
     }
@@ -125,6 +133,18 @@
   width:340px;
   height:245px;
   .addProduct_dialog_main{
+    input{
+      height: 32px;
+      line-height:32px;
+      font-size:12px;
+      margin:0 0 12px 0;
+    }
+  }
+}
+.addPrice_dialog{
+  width:340px;
+  height:200px;
+  .addPrice_dialog_main{
     input{
       height: 32px;
       line-height:32px;
