--- a/public/cms/less/pages/product_detail.less
+++ b/public/cms/less/pages/product_detail.less
@@ -62,6 +62,10 @@
         >span:nth-of-type(1){
           width:100px;
         }
+        .el-input{
+          display:inline-block;
+          width:438px;
+        }
       }
     }
     .baseData_see{
@@ -86,12 +90,12 @@
     }
     .baseData_edit{
       >p{
-        .classify_attr{
-          >input{
-            width:80px;
-            margin:0 30px 0 0;
-          }
-        }
+        //.classify_attr{
+        //  >input{
+        //    width:80px;
+        //    margin:0 30px 0 0;
+        //  }
+        //}
       }
       .cover_img{
         >span{
